04-01-TerraformInputVariables/instance.tf
# resource "aws_instance" "my-ec2-vm" {
#   ami           = var.ec2_ami_id
#   instance_type = var.ec2_instance_type
#   #instance_type          = var.ec2_instance_type[1]
#   #instance_type          = var.ec2_instance_type_map["big-apps"]
#   key_name               = "terraform-key"
#   count                  = var.ec2_instance_count
#   user_data              = <<-EOF
#     #!/bin/bash
#     sudo yum update -y
#     sudo yum install httpd -y
#     sudo systemctl enable httpd
#     sudo systemctl start httpd
#     echo "<h1>Welcome to Practico Terraform de Federico ! AWS Infra created using Terraform in us-east-1 Region</h1>" > /var/www/html/index.html
#     EOF
#   vpc_security_group_ids = [aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id]
#   #tags = var.ec2_instance_tags
#   tags = {
#     "Name" = "myec2vm"
#   }
# }

resource "aws_db_instance" "db1" {
  allocated_storage   = 5
  engine              = "mysql"
  instance_class      = "db.t2.micro"
  name                = "mydb1"
  username            = var.db_username
  password            = var.db_password
  skip_final_snapshot = true
}
